css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* start here */


/* Header Box */

.container {
	margin: 10px 40px;
}

.header-box {
	display: flex;
	flex-flow: row nowrap;
	justify-content: space-evenly;
	align-items: center;
	margin-bottom: 30px;
}

@media (max-width:800px) {
    .header-box {
        width: 100%;
        flex-flow: column wrap;
        margin: 8px;
    }
}

.header-box nav a {
	color: gray;
	text-decoration: none;
	margin: 0 20px;
}

.header-box nav {
	font-size: 25px;
	display: flex;
	justify-content: space-between;	
}



/* CTA box */

body .cta {
	display: flex;
	flex-flow: row wrap;
	justify-content: space-evenly;
	align-content: center;
	margin-bottom: 60px;

}

body .cta-text {
	font-size: 75px;
	text-align: center;
	padding-top: 50px;
}

body .cta-text button {
	background: white;
	vertical-align: top;
	margin-top: 6px;
	padding: 8px 44px;
	font-size: 17px;
	border: 1px solid black;
	cursor: pointer;
}

.cta .cta-text button:hover {
	background: black;
	color: white;
}
  
body .main-content .top-content {
	  display: flex;
	  flex-flow: row nowrap;
	  justify-content: center;
	  align-content: center;
}

body .main-content .text-content {
	  padding: 40px 0;
	  
}

body .main-content img {
	width: 100%;
}

body .main-content .bottom-content {
	display: flex;
	flex-flow: row nowrap;
	justify-content: center;
	align-content: center;
	width: 

}

body .main-content {
	border-top:1px solid black;
	border-bottom: 1px solid black;
	padding-bottom: 20px;
}

/* contact */

body .contact {
	display: flex;
	flex-direction:column;
	justify-content: space-around;
	border: 1px solidblack;
	margin-top: 40px;
	margin-bottom: 30px;
}

/* .contact h4, p {
	height: 45px;
} */

/* footer */

body footer {
	height: 50px;
	margin-top: 40px;
	text-align: center;
	margin-bottom: 50px;
}


/* New CSS from Services Page */

body .services-header-img {
	width:100%;
}

body .services {
	border-bottom: 1px solid black;
	padding: 30px 0;
}

body .services h2 {
	font-size: 25px;
}

body .main-container {
	display: flex;
	flex-flow: row wrap;
	justify-content: space-between;
	align-items: center;
	padding-top: 20px;
	padding-bottom: 20px;
}
.main-boxes {
	border: 1px solid black;
	width: 45%;
	background-color: rgb(238, 238, 238);
	padding: 15px;
	display: flex;
	flex-flow: column nowrap;
	align-items: flex-start;
	justify-content: center;
	margin: 20px;
}

.main-boxes button {
	background-color: white;
	border-radius: 5px;
	width: 150px;
	height: 40px;
	border: 1px solid black;
	margin-top: 45px;
}

body .bottom {
	display: flex;
	flex-flow: row nowrap;
	border-top: 1px solid black;
	

}

body .bottom .facts, img, ul {
	margin: 20px;
	list-style-type: disc;
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	align-content: space-between;
	width: 50%;
}


footer {
	text-align: center;
}

.bottom .facts p {
	margin: 10px;
}

@media (max-width:800px) {
    .header-box img {
        width: 125px;
        order: -1;
    }
}

@media (max-width:800px) {
    .header-box nav {
        width: 400px;
        font-size: 15px;
        justify-content: center;
        align-items: flex-start;

    }
    body .bottom .facts, img, ul {
        margin: 8px auto;
        padding: 0px;
    }

    .cta img {
        display: none;
    }
}

@media (max-width:500px) {
    body .container {
        width: 100%;
        margin: 0px 20px;
        padding: 0px;
    }

    header .header-box {
        display: flex;
        flex-flow: column wrap;
        margin: 0px;
        padding: 0px;
        width: 100%;
    
    }

    .header-box nav {
        display: flex;
        flex-flow: column;
        margin: 0 auto;
        align-items: center;
    }

     .header-box nav a {
        padding: 20px 0;
        border-bottom: 1px solid black;
        width: 100%;
        text-align: center;
        margin: 0px;
    } 

    .logo {
        /* border: 1px solid black;         */
    }

    body .main-content .top-content{
        flex-flow: column nowrap;
    }

    body .main-content .bottom-content {
        flex-flow: column nowrap;
    }

    .logo {
        margin-bottom: 20px;
    }

    #top-nav-mobile-view {
        border-top: 1px solid black;
    }



}

